			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

08-May-2004
~~~~~~~~~~~
Fix loss of bookmark name when re-ordering (Rahsheen Porter).

04-May-2004
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).

02-May-2004
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

01-May-2004
~~~~~~~~~~~
Updated French translation (Vincent Lefèvre).

30-Apr-2004 (Release 2.1.2)
~~~~~~~~~~~
Removed toolbar hint type from panel. It caused too many problems.

29-Apr-2004
~~~~~~~~~~~
Added 'Download handler' to drag and drop options. This program is invoked
when a URI is dragged to the filer (eg, from a web-browser). The default
command runs wget to download the file (Andrew Flegg).

27-Apr-2004
~~~~~~~~~~~
Bugfix: URIs received through drag-and-drop were unescaped twice, causing
	problems with names containing the '%' character (spotted by Jonatan
	Liljedahl).

21-Apr-2004
~~~~~~~~~~~
Cope with spaces in ROX-Filer's path.
Added a load of default keys, since many GTK setups now make it almost
impossible to change shortcuts.
Added --leaks option to run ROX-Filer through valgrind with the memory
leak option checking on (Stephen Watson).

08-Apr-2004
~~~~~~~~~~~
Added Xinerama support (Tony Houghton).
Set window type hint = toolbar for panel to prevent it appearing in pagers etc
(Tony Houghton).

04-Apr-2004
~~~~~~~~~~~
Added method of saving display settings for directories. Mostly working,
but bugs remain related to size and position (Stephen Watson).
Updated Spanish translation (Marcelo Ramos).

03-Apr-2004
~~~~~~~~~~~
Load extended attribute functions dynamically. This should mean that compiling
ROX-Filer with a new glibc won't make it stop working with older versions due
to the functions being missing.

02-Apr-2004
~~~~~~~~~~~
Use * as a synonym for unfiltered (Stephen Watson).

25-Mar-2004
~~~~~~~~~~~
Bookmarks can be given titles (Stephen Watson).

24-Mar-2004
~~~~~~~~~~~
Fix memory leak in thumbnails code (Stephen Watson).

20-Mar-2004
~~~~~~~~~~~