@@ -5,6 +5,9 @@
 08-May-2004
 ~~~~~~~~~~~
 Fix loss of bookmark name when re-ordering (Rahsheen Porter).
+Removed installation of thumbnail handlers via the Set Icon dialog.  It was
+never documented and all the thumbnailers use the mime_handler installation
+anyway (Stephen Watson).
 
 04-May-2004
 ~~~~~~~~~~~
